[package]
name = "core-executor"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cita_trie = "3.0"
crossbeam-channel = "0.5"
dashmap = "5.1"
evm = "0.33"
primitive-types = { version = "0.10", default-features = false }
futures = "0.3"
hasher = "0.1"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.12"
rand = { version = "0.8", features = ["small_rng"] }
rlp = "0.5"
rocksdb = { version = "0.16", package = "ckb-rocksdb" }

common-apm = { path = "../../common/apm" }
common-merkle = { path = "../../common/merkle" }
common-crypto = { path = "../../common/crypto" }
protocol = { path = "../../protocol", package = "axon-protocol" }

sha2 = "0.10"
rsa = "0.5"

email-rs = { git = "https://github.com/sking789/email-rs.git", branch = "multi-dkim-header" }
anyhow = "1.0"

[dev-dependencies]
common-crypto = { path = "../../common/crypto" }

core-storage = { path = "../storage" }
criterion = "0.3"
ethabi = "16.0"
ethabi-contract = "16.0"
ethabi-derive = "16.0"
getrandom = "0.2"
tempfile = "3.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ethcontract = "0.17"

wild_rand = { package = "rand", version = "0.7" }
num-traits = "0.2"

[[bench]]
name = "bench_transfer"
harness = false
